@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/openbox
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.265 2013/02/15 22:22:10 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/openbox/ChangeLog,v 1.266 2013/02/16 05:58:07 zmedico Exp $
+
+  16 Feb 2013; Zac Medico <zmedico@gentoo.org> openbox-3.5.0_p20130215.ebuild:
+  Fix for prefix and add ~x86-linux keyword.
 
 *openbox-3.5.0_p20130215 (15 Feb 2013)
 
